# factorio-crater

./: .gitignore  Cargo.toml  README.md  broken.txt  broken_for_1.1.txt  broken_with_reason.txt  broken_with_reason_for_1.1.txt  defs.lua  deprecated.txt  list factorio versions.lua  space-age incompatibles.lua  util.lua
src/: deserialization.rs  download.rs  gui.rs  lua.rs  main.rs
