[package]
name = "factorio-crater"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.30.0"
egui = "0.30.0"
futures = "0.3.31"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "1.0.217", features = ["derive", "serde_derive"] }
simd-json = "0.14.3"
tokio = { version = "1.43.0", features = ["fs", "full"] }
