[package]
name = "factorio-crater"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
eframe = "0.30.0"
futures = "0.3.31"
mlua = { version = "0.10.2", features = ["lua52"] }
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "1.0.217", features = ["derive", "serde_derive"] }
simd-json = "0.14.3"
tokio = { version = "1.43.0", features = ["fs", "full"] }
